[gd_scene load_steps=22 format=2]

[ext_resource path="res://script/AnimacaoPescador.gd" type="Script" id=1]
[ext_resource path="res://Imagens/cutscene1Fundo.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Stay Pixel DEMO.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/cutscene1Pescador.png" type="Texture" id=4]
[ext_resource path="res://Imagens/botaoStartPressionado.png" type="Texture" id=5]
[ext_resource path="res://Imagens/botaoStart.png" type="Texture" id=6]
[ext_resource path="res://Imagens/caixaDeTexto.png" type="Texture" id=7]
[ext_resource path="res://Imagens/nuvem1.png" type="Texture" id=8]
[ext_resource path="res://Imagens/nuvem2.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 600, 1200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 600, 1200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 600, 1200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 600, 1200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 1200, 600, 1200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 1200, 600, 1200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2400, 600, 1200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 2400, 600, 1200 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=11]
resource_name = "Nuvens"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 62, 22 ), Vector2( 393, 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Nuvem2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 374, 83 ), Vector2( 97, 83 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 62, 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Nuvem2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 374, 83 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="AnimatedSprite" parent="."]
position = Vector2( 232, 400 )
scale = Vector2( 0.78, 0.765 )
frames = SubResource( 10 )

[node name="Pescador" type="Sprite" parent="."]
position = Vector2( 386, 495 )
scale = Vector2( 2.02937, 2.02937 )
texture = ExtResource( 4 )

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 239, 698 )
scale = Vector2( 0.627, 0.505 )
texture = ExtResource( 7 )

[node name="texto" type="RichTextLabel" parent="."]
margin_left = 69.0
margin_top = 698.0
margin_right = 408.0
margin_bottom = 756.0
custom_fonts/normal_font = SubResource( 1 )
text = "Em uma tarde tranquila na cidade de Pilar"

[node name="Node2D" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 210.0
margin_top = 738.0
margin_right = 801.0
margin_bottom = 1329.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("Nuvem1")
anims/Nuvens = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Nuvem1" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 62, 22 )
texture = ExtResource( 8 )

[node name="Nuvem2" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 374, 83 )
scale = Vector2( 1.56, 1.46875 )
texture = ExtResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
